[gd_scene load_steps=2 format=3 uid="uid://jqvmn1sbaphk"]

[ext_resource type="Script" uid="uid://8dafutfatsod" path="res://menu/name_entry.gd" id="1_3rjf7"]

[node name="NameEntry" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3rjf7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(300, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -76.5
offset_top = -20.0
offset_right = 76.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Enter the Name of your Company"

[node name="NameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Company Name..."

[node name="AddButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Add Company"

[node name="PlayerList" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(280, 200)
layout_mode = 2
autowrap_mode = 3

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"
